[gd_scene load_steps=7 format=3 uid="uid://bunyohpobvu8b"]

[ext_resource type="Script" path="res://spiral_spawner.gd" id="1_yr50h"]
[ext_resource type="PackedScene" uid="uid://b1jd2temn5pdx" path="res://ele.tscn" id="2_l0h2f"]
[ext_resource type="Texture2D" uid="uid://rb8smo0f45mc" path="res://icon.svg" id="3_elb3r"]
[ext_resource type="Texture2D" uid="uid://mxxn1wfdfuli" path="res://sprites/10x10.png" id="4_18l83"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dnsko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfmxy"]
size = Vector2(1402, 132)

[node name="root" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HSlider" type="HSlider" parent="CanvasLayer"]
offset_left = 89.0
offset_top = 58.0
offset_right = 232.0
offset_bottom = 74.0
min_value = 1.0
max_value = 20.0
value = 4.0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 54.0
offset_right = 77.0
offset_bottom = 77.0
text = "Count:"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 243.0
offset_top = 58.0
offset_right = 283.0
offset_bottom = 81.0
text = "0
"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 78.0
offset_top = 104.0
offset_right = 191.0
offset_bottom = 135.0
text = "Create Nodes"

[node name="spiral_spawner" type="Node2D" parent="."]
position = Vector2(518, 410)
script = ExtResource("1_yr50h")
ele_scene = ExtResource("2_l0h2f")

[node name="Sprite2D" type="Sprite2D" parent="spiral_spawner"]
texture = ExtResource("3_elb3r")

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(502, 949)

[node name="ground" type="Sprite2D" parent="ground"]
material = SubResource("CanvasItemMaterial_dnsko")
scale = Vector2(137.8, 10.9)
texture = ExtResource("4_18l83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(-15, -4)
shape = SubResource("RectangleShape2D_yfmxy")

[connection signal="value_changed" from="CanvasLayer/HSlider" to="spiral_spawner" method="_on_h_slider_value_changed"]
[connection signal="button_down" from="CanvasLayer/Button" to="spiral_spawner" method="_on_button_button_down"]
